# qwen3-tts-rs

./: .gitignore  Cargo.toml  README.md  TESTS.md  cudnn_version_shim.c
.github/workflows/: release.yml
qwen3_tts/: Cargo.toml
qwen3_tts/src/: lib.rs
qwen3_tts/src/audio/: mel.rs  mod.rs  quantizer.rs  utils.rs
qwen3_tts/src/audio/decoder/: mod.rs  v2.rs
qwen3_tts/src/audio/encoder/: transformer.rs
qwen3_tts/src/audio/tokenizer/: wrapper.rs
qwen3_tts/src/audio/tokenizer/v2/: causal_conv.rs  config.rs  convnext.rs  mod.rs  transformer.rs
qwen3_tts/src/config/: rope_config.rs  speaker_encoder_config.rs  tts_config.rs
qwen3_tts/src/io/: model_path.rs  output_path.rs  voice_prompt.rs
qwen3_tts/src/model/: custom_voice.rs  generate.rs  loader.rs  mod.rs  options.rs  voice_clone.rs
qwen3_tts/src/nn/: code_predictor.rs  decoder_layer.rs  generation.rs  generation_tests.rs  generation_utils.rs  mlp.rs  mt_rng.rs  sampling.rs  speaker_encoder.rs  talker.rs
qwen3_tts/src/nn/attention/: rope_strategy.rs  unified.rs
qwen3_tts/src/nn/rope/: core.rs  mod.rs  simple.rs  talker.rs
qwen3_tts/src/synthesis/: mod.rs  synthesize_voice.rs
qwen3_tts/src/text/: mod.rs  processing.rs
qwen3_tts/tests/: integration_tests.rs
qwen3_tts_cli/: Cargo.toml
qwen3_tts_cli/src/: args.rs  main.rs
qwen_tts/: Cargo.toml
qwen_tts/src/: lib.rs
qwen_tts/src/audio/decoder/: config.rs  residual_unit.rs
qwen_tts/src/audio/encoder/: mod.rs  quantizer.rs  seanet.rs  v2.rs
qwen_tts/src/audio/tokenizer/: mod.rs
qwen_tts/src/audio/tokenizer/v2/: mod.rs  snake_beta.rs
qwen_tts/src/config/: code_predictor_config.rs  mod.rs  talker_config.rs
qwen_tts/src/io/: batch_items.rs  mod.rs  tokenizer.rs  voice_prompt.rs
qwen_tts/src/model/: config.rs  generate.rs  loader.rs  mod.rs  types.rs  voice_clone.rs  voice_design.rs
qwen_tts/src/nn/: generation.rs  generation_options.rs  kv_cache.rs  mod.rs  norm.rs  rope_scaling.rs  timing.rs
qwen_tts/src/nn/attention/: config.rs  mod.rs  standard.rs  talker.rs
qwen_tts/src/nn/rope/: standard.rs
qwen_tts/src/synthesis/: detect_mode.rs  tokenizer.rs
qwen_tts/src/text/: processing.rs
qwen_tts/tests/: integration_tests.rs
qwen_tts_cli/: Cargo.toml  LICENSE
qwen_tts_cli/src/: args.rs  main.rs
