[package]
name = "qwen_tts_cli"
version = "0.1.1"
edition = "2024"
description = "Command-line interface for Qwen3-TTS text-to-speech synthesis"
repository = "https://github.com/danielclough/qwen3-tts-rs"
keywords = ["tts", "speech-synthesis", "cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[[bin]]
name = "qwen-tts"
path = "src/main.rs"

[dependencies]
qwen_tts = { version = "0.1.1", path = "../qwen_tts" }
candle-core = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
hf-hub = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[features]
default = []
accelerate = ["qwen_tts/accelerate"]
cuda = ["qwen_tts/cuda"]
cudnn = ["qwen_tts/cudnn"]
flash-attn = ["qwen_tts/flash-attn"]
mkl = ["qwen_tts/mkl"]
nccl = ["qwen_tts/nccl"]
audio-loading = ["qwen_tts/audio-loading"]
metal = ["qwen_tts/metal"]
timing = ["qwen_tts/timing"]